--- a/src/html/views/admin/admin.html
+++ b/src/html/views/admin/admin.html
@@ -25,12 +25,26 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/login">Login</a>
+                                <a class="nav-link" aria-current="page" href="/map">View Map</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/register">Register</a>
+                                <a class="nav-link" aria-current="page" href="#">Manage Item Data</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">Manage Store Data</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">View Statistics</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="#">View Leaderboard</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/logout">Logout</a>
                             </li>
                         </ul>
                     </div>
@@ -38,24 +52,6 @@
             </nav>
         </header>
         <main>
-            <div class="container">
-                <h1 class="h1 my-3 text-center">Welcome to E-Deals!</h1>
-                <h2 class="h2">Please login below:</h2>
-                <form name="login_form" method="post" action="login">
-                    <div class="mb-3">
-                        <label class="form-label">Username:</label>
-                        <input name="username" type="username" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Password:</label>
-                        <input name="password" type="password" class="form-control">
-                    </div>
-                    <div class="mb-4 form-check">
-                        <input type="checkbox" class="form-check-input">
-                        <label class="form-check-label">Remember Me</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
