Made items on the submit page able to be selected, only one at a time

--- a/src/html/views/submit/submit.html
+++ b/src/html/views/submit/submit.html
@@ -75,13 +75,13 @@
                                         </h2>
                                         <div id="subone-collapseOne" class="accordion-collapse collapse" aria-labelledby="subone-headingOne" data-bs-parent="#subone-itemsAccordion">
                                             <div class="accordion-body">
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 1
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 2
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 3
                                                 </button>
                                             </div>
@@ -95,13 +95,13 @@
                                         </h2>
                                         <div id="subone-collapseTwo" class="accordion-collapse collapse" aria-labelledby="subone-headingTwo" data-bs-parent="#subone-itemsAccordion">
                                             <div class="accordion-body">
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 1
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 2
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 3
                                                 </button>
                                             </div>
@@ -128,13 +128,13 @@
                                         </h2>
                                         <div id="subtwo-collapseOne" class="accordion-collapse collapse" aria-labelledby="subtwo-headingTwo" data-bs-parent="#subtwo-itemsAccordion">
                                             <div class="accordion-body">
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 1
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 2
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 3
                                                 </button>
                                             </div>
@@ -148,13 +148,13 @@
                                         </h2>
                                         <div id="subtwo-collapseTwo" class="accordion-collapse collapse" aria-labelledby="subtwo-headingTwo" data-bs-parent="#subtwo-itemsAccordion">
                                             <div class="accordion-body">
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 1
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 2
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 3
                                                 </button>
                                             </div>
@@ -181,13 +181,13 @@
                                         </h2>
                                         <div id="subthree-collapseOne" class="accordion-collapse collapse" aria-labelledby="subthree-headingTwo" data-bs-parent="#subthree-itemsAccordion">
                                             <div class="accordion-body">
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 1
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 2
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 3
                                                 </button>
                                             </div>
@@ -201,13 +201,13 @@
                                         </h2>
                                         <div id="subthree-collapseTwo" class="accordion-collapse collapse" aria-labelledby="subthree-headingTwo" data-bs-parent="#subthree-itemsAccordion">
                                             <div class="accordion-body">
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 1
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 2
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 3
                                                 </button>
                                             </div>
@@ -234,13 +234,13 @@
                                         </h2>
                                         <div id="subfour-collapseOne" class="accordion-collapse collapse" aria-labelledby="subfour-headingTwo" data-bs-parent="#subfour-itemsAccordion">
                                             <div class="accordion-body">
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 1
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 2
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 3
                                                 </button>
                                             </div>
@@ -254,13 +254,13 @@
                                         </h2>
                                         <div id="subfour-collapseTwo" class="accordion-collapse collapse" aria-labelledby="subfour-headingTwo" data-bs-parent="#subfour-itemsAccordion">
                                             <div class="accordion-body">
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 1
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 2
                                                 </button>
-                                                <button class="accordion-button collapsed" type="button">
+                                                <button class="accordion-button collapsed" type="button" onclick="select(this)">
                                                     Item 3
                                                 </button>
                                             </div>
@@ -274,5 +274,24 @@
             </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        <script>
+            var last;
+            function select(element)
+            {
+                if (typeof last !== "undefined")
+                {
+                    last.setAttribute("class", "accordion-button collapsed");
+                }
+                if (element.getAttribute("class") === "accordion-button collapsed")
+                {
+                    element.setAttribute("class", "accordion-button");
+                }
+                else
+                {
+                    element.setAttribute("class", "accordion-button collapsed");
+                }
+                last = element;
+            }
+        </script>
     </body>
 </html>
