--- a/src/html/views/admin/leaderboard/leaderboard.html
+++ b/src/html/views/admin/leaderboard/leaderboard.html
@@ -19,18 +19,32 @@
                 <div class="container-fluid">
                     <img src="/favicon-white.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     <a class="navbar-brand ms-2" href="/index">
-                            E-Deals
+                        E-Deals
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/login">Login</a>
+                                <a class="nav-link" aria-current="page" href="/map">View Map</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/register">Register</a>
+                                <a class="nav-link" aria-current="page" href="/admin/items"> Manage Item Data</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/admin/stores">Manage Store Data</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/admin/statistics">View Statistics</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/admin/leaderboard">View Leaderboard</a>
+                            </li>
+                        </ul>
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="/logout">Logout</a>
                             </li>
                         </ul>
                     </div>
@@ -38,25 +52,7 @@
             </nav>
         </header>
         <main>
-            <div class="container">
-                <h1 class="h1 my-3 text-center">Welcome to E-Deals!</h1>
-                <h2 class="h2">Please register below:</h2>
-                <form name="login_form" method="post" action="user">
-                    <div class="mb-3">
-                        <label class="form-label">Username:</label>
-                        <input name="username" type="username" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Password:</label>
-                        <input name="password" type="password" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">Retype Password:</label>
-                        <input name="retype password" type="retype password" class="form-control">
-                    </div>
-                    <button type="submit" class="btn btn-primary mt-3">Register</button>
-                </form>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
         </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
 </html>
