--- a/src/html/views/admin/statistics/statistics.html
+++ b/src/html/views/admin/statistics/statistics.html
@@ -17,7 +17,7 @@
         <header>
             <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
                 <div class="container-fluid">
-                    <img src="favicon-white.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="/favicon-white.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     <a class="navbar-brand ms-2" href="/index">
                         E-Deals
                     </a>
@@ -30,16 +30,16 @@
                                 <a class="nav-link" aria-current="page" href="/map">View Map</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Manage Item Data</a>
+                                <a class="nav-link" aria-current="page" href="/admin/items"> Manage Item Data</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">Manage Store Data</a>
+                                <a class="nav-link" aria-current="page" href="/admin/stores">Manage Store Data</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">View Statistics</a>
+                                <a class="nav-link active" aria-current="page" href="/admin/statistics">View Statistics</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">View Leaderboard</a>
+                                <a class="nav-link" aria-current="page" href="/admin/leaderboard">View Leaderboard</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
