--- a/src/html/views/admin/itemsData/itemsData.html
+++ b/src/html/views/admin/itemsData/itemsData.html
@@ -54,18 +54,18 @@
         <main>
             <div class="container">
                 <h1 class="h1 my-3 text-center">Manage Item Data</h1>
+                <div id="liveAlertPlaceholder"></div>
                 <h2 class="h2 mt-5 mb-3">Please upload new JSON item file below:</h2>
-                <form action="upload" method="post" enctype="multipart/form-data">
+                <form action="items/upload" method="post" enctype="multipart/form-data" id="uploadForm">
                     <div class="mb-3">
                         <input class="form-control" type="file" id="file" name="file">
                     </div>
-                    <input type="submit" class="btn btn-primary" value="Update Item Data">
                 </form>
-                <form action="delete" method="post">
-                    <button action="delete.php" type="submit" class="btn btn-primary">Delete All Item Data</button>
-                </form>
+                <button class="btn btn-primary" id="uploadButton">Update Category / Price Data</button>
+                <button class="btn btn-primary" id="itemsDeleteButton">Delete All Item Data</button>
             </div>
         </main>
+        <script src="../views/admin/forms.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
 </html>
