--- a/src/html/views/submit/submit.html
+++ b/src/html/views/submit/submit.html
@@ -274,24 +274,6 @@
             </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-        <script>
-            var last;
-            function select(element)
-            {
-                if (typeof last !== "undefined")
-                {
-                    last.setAttribute("class", "accordion-button collapsed");
-                }
-                if (element.getAttribute("class") === "accordion-button collapsed")
-                {
-                    element.setAttribute("class", "accordion-button");
-                }
-                else
-                {
-                    element.setAttribute("class", "accordion-button collapsed");
-                }
-                last = element;
-            }
-        </script>
+        <script src="views/submit/submit.js"></script>
     </body>
 </html>
