Made file uploads nicer

--- a/src/html/views/admin/storesData/storesData.html
+++ b/src/html/views/admin/storesData/storesData.html
@@ -57,13 +57,13 @@
                 <h1 class="h1 my-3 text-center">Manage Store Data</h1>
                 <div id="liveAlertPlaceholder"></div>
                 <h2 class="h2 mt-5 mb-3">Please upload new GeoJSON store file below:</h2>
-                <form action="stores/upload" method="post" enctype="multipart/form-data" id="uploadForm">
+                <!--<form action="stores/upload" method="post" enctype="multipart/form-data" id="uploadForm">-->
                     <div class="mb-3">
                         <input class="form-control" type="file" id="file" name="file">
                     </div>
-                </form>
-                <button class="btn btn-primary" id="uploadButton">Update Store Data</button>
-                <button class="btn btn-primary" id="storesDeleteButton">Delete All Store Data</button>
+                <!--</form>-->
+                <button class="btn btn-primary" id="uploadButton">Upload Store Data</button>
+                <button class="btn btn-primary" id="deleteButton">Delete All Store Data</button>
             </div>
         </main>
         <script src="../views/admin/forms.js"></script>
