--- a/src/html/views/admin/itemsData/itemsData.html
+++ b/src/html/views/admin/itemsData/itemsData.html
@@ -57,13 +57,13 @@
                 <h1 class="h1 my-3 text-center">Manage Item Data</h1>
                 <div id="liveAlertPlaceholder"></div>
                 <h2 class="h2 mt-5 mb-3">Please upload new JSON item file below:</h2>
-                <form action="items/upload" method="post" enctype="multipart/form-data" id="uploadForm">
+                <!--<form action="items/upload" method="post" enctype="multipart/form-data" id="uploadForm">-->
                     <div class="mb-3">
                         <input class="form-control" type="file" id="file" name="file">
                     </div>
-                </form>
-                <button class="btn btn-primary" id="uploadButton">Update Category / Price Data</button>
-                <button class="btn btn-primary" id="itemsDeleteButton">Delete All Item Data</button>
+                <!--</form>-->
+                <button class="btn btn-primary" id="uploadButton">Upload Category / Price Data</button>
+                <button class="btn btn-primary" id="deleteButton">Delete All Item Data</button>
             </div>
         </main>
         <script src="../views/admin/forms.js"></script>
