--- a/src/html/views/login/login.html
+++ b/src/html/views/login/login.html
@@ -11,6 +11,7 @@
         <meta name="theme-color" content="#ffffff">
         <meta charset="utf-8"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
@@ -40,23 +41,25 @@
         <main>
             <div class="container">
                 <h1 class="h1 my-3 text-center">Welcome to E-Deals!</h1>
+                <div id="liveAlertPlaceholder"></div>
                 <h2 class="h2">Please login below:</h2>
-                <form name="login_form" method="post" action="login">
+                <!--<form name="login_form" method="post" action="login">-->
                     <div class="mb-3">
                         <label class="form-label">Username:</label>
-                        <input name="username" type="username" class="form-control">
+                        <input name="username" type="username" class="form-control" id="username">
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Password:</label>
-                        <input name="password" type="password" class="form-control">
+                        <input name="password" type="password" class="form-control" id="password">
                     </div>
-                    <div class="mb-4 form-check">
+                    <!--<div class="mb-4 form-check">
                         <input type="checkbox" class="form-check-input">
                         <label class="form-check-label">Remember Me</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
+                    </div>-->
+                    <button type="submit" class="btn btn-primary" id="loginButton" name"loginButton">Login</button>
+                <!--</form>-->
         </main>
+        <script src="../views/login/login.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
 </html>
