Added account detail changing functionality

--- a/src/html/views/register/register.html
+++ b/src/html/views/register/register.html
@@ -57,8 +57,8 @@
                         <input name="password" type="password" class="form-control" id="password">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Retype Password:</label>
-                        <input name="retype password" type="password" class="form-control" id="retype_password">
+                        <label class="form-label">Repeat Password:</label>
+                        <input name="repeat password" type="password" class="form-control" id="repeat_password">
                     </div>
                     <button type="submit" class="btn btn-primary mt-3" id="registerButton">Register</button>
                 <!--</form>-->
