--- a/src/html/views/profile/profile.html
+++ b/src/html/views/profile/profile.html
@@ -11,6 +11,7 @@
         <meta name="theme-color" content="#ffffff">
         <meta charset="utf-8"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
@@ -151,29 +152,31 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="details-tab-pane" role="tabpanel" aria-labelledby="details-tab" tabindex="0">
-                        <form name="login_form" method="post" action="user">
+                        <div id="liveAlertPlaceholder"></div>
+                        <!--<form name="login_form" method="post" action="user">-->
                             <div class="mb-3">
                                 <label class="form-label">New Username:</label>
-                                <input name="new-username" type="username" class="form-control">
+                                <input name="new_username" type="username" id="new_username" class="form-control">
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">New Password:</label>
-                                <input name="new-password" type="password" class="form-control">
+                                <input name="new_password" type="password" class="form-control" id="new_password">
                             </div>
                             <div class="mb-3">
                                 <label class="form-label">Repeat Password:</label>
-                                <input name="repeat-password" type="password" class="form-control">
+                                <input name="repeat_password" type="password" class="form-control" id="repeat_password">
                             </div>
                             <div class="mb-4">
                                 <label class="form-label">Old Password:</label>
-                                <input name="old-username" type="password" class="form-control">
+                                <input name="old_password" type="password" class="form-control" id="old_password">
                             </div>
-                            <button type="submit" class="btn btn-primary">Apply</button>
-                        </form>
+                            <button type="submit" class="btn btn-primary" id="applyButton">Apply</button>
+                        <!--</form>-->
                     </div>
                 </div>
             </div>
         </main>
+        <script src="../views/profile/details/details.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
 </html>
