--- a/src/html/views/profile/profile.html
+++ b/src/html/views/profile/profile.html
@@ -64,34 +64,21 @@
                 </ul>
                 <div class="tab-content mt-5" id="myTabContent">
                     <div class="tab-pane fade show active" id="deals-tab-pane" role="tabpanel" aria-labelledby="deals-tab" tabindex="0">
-                        <table class="table table-striped border">
+                        <h1 class='h1 text-center' id='no-deals'>You haven't submitted any deals!</h1>
+                        <table class="table table-striped border" id="deals-history-table" hidden="true">
                             <thead>
                                 <tr>
                                     <th scope="col">Deal ID</th>
                                     <th scope="col">Item</th>
                                     <th scope="col">Price</th>
                                     <th scope="col">Store</th>
+                                    <th scope="col">Number of Likes</th>
+                                    <th scope="col">Number of Dislikes</th>
+                                    <th scope="col">Registration Date</th>
+                                    <th scope="col">Expiration Date</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Placeholder</td>
-                                    <td>Placeholder</td>
-                                    <td>Placeholder</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">2</th>
-                                    <td>Placeholder</td>
-                                    <td>Placeholder</td>
-                                    <td>Placeholder</td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">3</th>
-                                    <td>Placeholder</td>
-                                    <td>Placeholder</td>
-                                    <td>Placeholder</td>
-                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -177,6 +164,7 @@
             </div>
         </main>
         <script src="../views/profile/details/details.js"></script>
+        <script src="../views/profile/dealsHistory/dealsHistory.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
 </html>
