--- a/src/html/views/profile/profile.html
+++ b/src/html/views/profile/profile.html
@@ -83,8 +83,9 @@
                         </table>
                     </div>
                     <div class="tab-pane fade mt-5" id="likes-tab-pane" role="tabpanel" aria-labelledby="likes-tab" tabindex="0">
+                        <h1 class='h1 text-center' id='no-reviews'>You haven't submitted any deals!</h1>
                         <div class="tab-pane fade show active" id="deals-tab-pane" role="tabpanel" aria-labelledby="deals-tab" tabindex="0">
-                            <table class="table table-striped border">
+                            <table class="table table-striped border" id="reviews-history-table" disabled="true">
                                 <thead>
                                     <tr>
                                         <th scope="col">Actor</th>
@@ -94,24 +95,6 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>Placeholder</td>
-                                        <td>Placeholder</td>
-                                        <td>Placeholder</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Placeholder</td>
-                                        <td>Placeholder</td>
-                                        <td>Placeholder</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>Placeholder</td>
-                                        <td>Placeholder</td>
-                                        <td>Placeholder</td>
-                                    </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -165,6 +148,7 @@
         </main>
         <script src="../views/profile/details/details.js"></script>
         <script src="../views/profile/dealsHistory/dealsHistory.js"></script>
+        <script src="../views/profile/reviewsHistory/reviewsHistory.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
 </html>
