--- a/src/html/views/profile/profile.html
+++ b/src/html/views/profile/profile.html
@@ -83,9 +83,9 @@
                         </table>
                     </div>
                     <div class="tab-pane fade mt-5" id="likes-tab-pane" role="tabpanel" aria-labelledby="likes-tab" tabindex="0">
-                        <h1 class='h1 text-center' id='no-reviews'>You haven't submitted any deals!</h1>
+                        <h1 class='h1 text-center' id='no-reviews'>You haven't reviewed any deal!</h1>
                         <div class="tab-pane fade show active" id="deals-tab-pane" role="tabpanel" aria-labelledby="deals-tab" tabindex="0">
-                            <table class="table table-striped border" id="reviews-history-table" disabled="true">
+                            <table class="table table-striped border" id="reviews-history-table" hidden="true">
                                 <thead>
                                     <tr>
                                         <th scope="col">Actor</th>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="tab-pane fade mt-5" id="score-tab-pane" role="tabpanel" aria-labelledby="score-tab" tabindex="0">
                         <div class="tab-pane fade show active" id="deals-tab-pane" role="tabpanel" aria-labelledby="deals-tab" tabindex="0">
-                            <table class="table table-striped border">
+                            <table class="table table-striped border" hidden="true" id="score-history-table">
                                 <thead>
                                     <tr>
                                         <th scope="col">Month's Score</th>
@@ -111,12 +111,6 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td scope="row">Placeholder</td>
-                                        <td scope="row">Placeholder</td>
-                                        <td scope="row">Placeholder</td>
-                                        <td scope="row">Placeholder</td>
-                                    </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -149,6 +143,7 @@
         <script src="../views/profile/details/details.js"></script>
         <script src="../views/profile/dealsHistory/dealsHistory.js"></script>
         <script src="../views/profile/reviewsHistory/reviewsHistory.js"></script>
+        <script src="../views/profile/scoreHistory/scoreHistory.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
 </html>
