--- a/src/html/views/admin/leaderboard/leaderboard.html
+++ b/src/html/views/admin/leaderboard/leaderboard.html
@@ -7,10 +7,12 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <meta charset="utf-8"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
@@ -52,7 +54,27 @@
             </nav>
         </header>
         <main>
+            <div class="container tab-content mt-5" id="leaderboardTab">
+                <h1 class="h1 text-center">These Are The Users With The Highest Score!</h1>
+                <div class="tab-pane fade show active mt-5" id="deals-tab-pane" role="tabpanel" aria-labelledby="deals-tab" tabindex="0">
+                    <table id="leaderboard-table" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th class="th-sm">Position</th>
+                                <th class="th-sm">Username</th>
+                                <th class="th-sm">Total Score</th>
+                                <th class="th-sm">Current Score</th>
+                                <th class="th-sm">Total Tokens</th>
+                                <th class="th-sm">Last Month's Tokens</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+        <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+        <script src="../views/admin/leaderboard/leaderboard.js"></script>
     </body>
 </html>
