--- a/src/html/views/admin/storesData/storesData.html
+++ b/src/html/views/admin/storesData/storesData.html
@@ -15,43 +15,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     </head>
     <body>
-        <header>
-            <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-                <div class="container-fluid">
-                    <img src="/favicon-white.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                    <a class="navbar-brand ms-2" href="/index">
-                        E-Deals
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/map">View Map</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/admin/items"> Manage Item Data</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/admin/stores">Manage Store Data</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/admin/statistics">View Statistics</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/admin/leaderboard">View Leaderboard</a>
-                            </li>
-                        </ul>
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/logout">Logout</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
         <main>
             <div class="container">
                 <h1 class="h1 my-3 text-center">Manage Store Data</h1>
@@ -66,6 +29,7 @@
                 <button class="btn btn-primary" id="deleteButton">Delete All Store Data</button>
             </div>
         </main>
+        <script src="../views/admin/storesData/storesData.js"></script>
         <script src="../views/admin/forms.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
