--- a/src/html/views/profile/profile.html
+++ b/src/html/views/profile/profile.html
@@ -15,37 +15,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <header>
-            <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-                <div class="container-fluid">
-                    <img src="/favicon-white.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                    <a class="navbar-brand ms-2" href="/index">
-                        E-Deals
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/map">Deals Map</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/submit">Submit Deal</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/profile">My Profile</a>
-                            </li>
-                        </ul>
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/logout">Logout</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
         <main>
             <div class="container mt-5">
                 <ul class="nav nav-pills border rounded nav-justified" id="myTab" role="tablist">
@@ -140,6 +109,7 @@
                 </div>
             </div>
         </main>
+        <script src="../views/profile/profile.js"></script>
         <script src="../views/profile/details/details.js"></script>
         <script src="../views/profile/dealsHistory/dealsHistory.js"></script>
         <script src="../views/profile/reviewsHistory/reviewsHistory.js"></script>
