--- a/src/html/views/submit/submit.html
+++ b/src/html/views/submit/submit.html
@@ -11,6 +11,7 @@
         <meta name="theme-color" content="#ffffff">
         <meta charset="utf-8"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <style>
         .accordion-button:not(.collapsed)::after,
@@ -19,37 +20,6 @@
         </style>
     </head>
     <body>
-        <header>
-            <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-                <div class="container-fluid">
-                    <img src="/favicon-white.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                    <a class="navbar-brand ms-2" href="/index">
-                        E-Deals
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/map">Deals Map</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/submit">Submit Deal</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/profile">My Profile</a>
-                            </li>
-                        </ul>
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="/logout">Logout</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
         <main>
             <div class="container my-5">
                 <div class="form-outline">
