Corrected file uploads so when duplicate keys are found, update is done instead

--- a/src/html/views/admin/itemsData/itemsData.html
+++ b/src/html/views/admin/itemsData/itemsData.html
@@ -20,7 +20,7 @@
                 <h1 class="h1 my-3 text-center">Manage Item Data</h1>
                 <div id="liveAlertPlaceholder"></div>
                 <h2 class="h2 mt-5 mb-3">Please upload new JSON item file below:</h2>
-                <!--<form action="items/upload" method="post" enctype="multipart/form-data" id="uploadForm">-->
+                <!--<form action="/api/admin/items/upload" method="post" enctype="multipart/form-data" id="uploadForm">-->
                     <div class="mb-3">
                         <input class="form-control" type="file" id="file" name="file">
                     </div>
