Added map popups with location checks, removed test view and unnecessary prices api call

--- a/src/html/views/map/map.html
+++ b/src/html/views/map/map.html
@@ -18,6 +18,7 @@
     <body>
         <div class="container mt-5">
             <h1 class="h1 text-center">Please Select A Store To View Deals!</h1>
+            <div id="liveAlertPlaceholder"></div>
             <div class="form-outline mt-2">
                 <div class="col">
                     <input type="search" id="searchForm" class="form-control" placeholder="Filter Stores By Name" aria-label="Filter" />
