added update score & fixed review page navbar

--- a/src/html/views/review/review.html
+++ b/src/html/views/review/review.html
@@ -18,7 +18,7 @@
             <div id="liveAlertPlaceholder"></div>
             <div id="offers"  class="text-center"></div>
             <div id="details" class="text-center"></div>
-            <button class="btn btn-primary mt-3" id="searchButton" onclick="removeDetails()">Remove Details</button>
+            <button class="btn btn-primary mt-3" id="searchButton" onclick="removeDetails()">Hide Details</button>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
